samples/_failures_safe/1761649297_a83ff2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a28329a8.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_a28329a8.c:130:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  130 |             for (int k
      |             ^~~
./samples/SAFE/__tmp_a28329a8.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a28329a8.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a28329a8.c:130:13: error: expected declaration or statement at end of input
